fixed bug - (detail page title overflow UI bug)

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,4 +5,8 @@ grasscube-header {
     height: auto;
     border-radius: 50%;
   }
+  .title {
+    width: 80%;
+    margin-bottom: 6px;
+  }
 }
